# Sunspot

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Claude-Controlling Servos on Raspberry Pi with C++.md  Claude-Use ESP32 as WiFi Access Point to SSH into Raspberry Pi.md  Claude-Waveshare UPS S3 Battery Monitoring in C++.md  Dockerfile  Dockerfile1.txt  MoG.cpp  README.md  check_ip.py  docker_compose.yml  dockerfiletext.txt  led2.cpp  main.cpp  picamera2_headless_test.py  ros2.md
CameraCalibration+Extras/: camera_calibration.py  check_ip.py  focus_assist.py
Code/: CameraManager.py  Config.py  CvFunctions.py  HardwareManger.py  WebUi.py  camera_calibration.py  main.py
Code/oldcalibrationdata/: camera_calibration_data.npz  camera_extrinsic_data.npz
ComputerVisionResearch/: applydetection.py  applydetectition.py  detect_volleyball.py  prepare_dataset.py  train_model_generator.py  train_models.py
ComputerVisionResearch/version1/: applydetection.py  hsvtuner.py  train_ball_model.py
ComputerVisionResearch/version1/.oldcode/: applydetection26-6.py  detect_volleyball_25-6.py
ComputerVisionResearch/version2/Code/: COCOdatasetextractor.py  augment_dataset.py  create_dataset_from_video.py  smartdatasetmerger.py  split_dataset.py  trainyolo.py  trainyolomode.py  yolo_test_harness_cli.py
ComputerVisionResearch/version2/yolo_dataset_manager/: README.md  app.py  index.html  main.css  package-lock.json  package.json  requirements.txt  run_yolo.py  server.js  start.sh  utils.py
ExtriniscIntrinsicResearch/: CameraManager.py  Config.py  CvFunctions.py  README.md  WebUi.py  camera_calibration.py  camera_extrinsic_data.npz  main.py
Microcontroller/include/: buttons.h  led.h
Microcontroller/src/: buttons.cpp  main.cpp  servo.cpp  test6.cpp
Microcontrollers/serial_mc/: platformio.ini
Microcontrollers/serial_mc/include/: switch.h
Microcontrollers/serial_mc/src/: led.cpp  main.cpp
Microcontrollers/sunspotmc/: platformio.ini
Microcontrollers/sunspotmc/include/: buttons.h  led.h  serial.h  servo.h  switch.h
Microcontrollers/sunspotmc/src/: buttons.cpp  led.cpp  main.cpp  main3.cpp  main4.cpp  main6.cpp  serial.cpp  switch.cpp
OS_v1.0/: CMakeLists.txt
OS_v1.0/Microcontroller/src/: Test4.cpp  led.cpp  main().cpp  main(1).cpp  main.cpp
OS_v1.0/dependants/: INA219.cpp  INA219.h  OS_tools.cpp  OS_tools.h
OS_v1.0/include/: FrameQueue.cpp  FrameQueue.h  OS_tools.cpp  OS_tools.h
OS_v1.0/src/: main.cpp  notes.md
PCB/Components/B10B_XH_A/: B10B-XH-A.kicad_sym  JST_B10B-XH-A.kicad_mod
PCB/Components/B2B_XH_A/: JST_B2B-XH-A.kicad_mod
PCB/Components/B3B_XH_A/: JST_B3B-XH-A.kicad_mod
PCB/Components/B4B_XH_A/: JST_B4B-XH-A.kicad_mod
PCB/Components/B9B_XH_A/: B9B-XH-A.kicad_sym  B9B-XH-A.step  JST_B9B-XH-A.kicad_mod
PCB/Projects/Input Board/: Input Board.kicad_pcb  Input Board.kicad_pro  Input Board.kicad_sch
PCB/Projects/Input Board 2/: #auto_saved_files#  Input Board 2.kicad_pcb  Input Board 2.kicad_prl  Input Board 2.kicad_pro  Input Board 2.kicad_sch  Input Board 2.step  fp-info-cache  ~Input Board 2.kicad_sch.lck
PCB/Projects/Input Board 2/Gerber(InputBoard2)/: Input Board 2-B_Cu.gbr  Input Board 2-B_Mask.gbr  Input Board 2-B_Paste.gbr  Input Board 2-B_Silkscreen.gbr  Input Board 2-Edge_Cuts.gbr  Input Board 2-F_Cu.gbr  Input Board 2-F_Mask.gbr  Input Board 2-F_Paste.gbr  (+4 more)
PV1/docker/: Dockerfile  Dockerfilecopy.txt  cyclonedds.xml  docker_compose.yml  toggle_script.sh
PV1/ros2_ws/log/: latest_build
ProjectVersion1/docker/: docker-compose.yml  toggle.desktop
ProjectVersion1/ros2_ws/install/: local_setup.sh  setup.sh
Sunspot Lite/: Recording.py  Recording3.py  Recording5.py  Recording6.py  Recording7.py  ap_toggle.sh
Sunspot V1.0/Microcontroller/include/: serial.h
Sunspot V1.0/Microcontroller/src/: main.cpp
Sunspot V1.0/OS_v1.0/include/: OS_tools.h
Sunspot V1.0/OS_v1.0/src/: main.cpp
Sunspot_Lite/: Recording.py  Recording2.py  Recording7.py  Recording8.py  servo.py  servo2.py  servo3.py  toggle.sh
Sunspot_Lite/old/: Recording.py  Recording4.py  markdown.md  servo.py  servo3.py
Sunspot_V1.0/Microcontroller/include/: servo.h
Sunspot_V1.0/Microcontroller/src/: Test1.cpp  servo.cpp  test5.cpp
Sunspot_V1.0/OS_v1.0/: CMakeLists.txt
Sunspot_V1.0/OS_v1.0/include/: INA219.h  OS_tools.cpp
Sunspot_V2.0/: camera_manager.py  config.py  cv_functions.py  cv_test.py  hardware_manager.py  main.py  pinout.md  web_ui.py
Sunspot_V2.0/codemodifier/: camera_manager.py  config.py  hardware_manager.py  main.py  web_ui.py
Sunspot_V2.0/env/: pyvenv.cfg
Sunspot_V2.0/old/: camera_manager.py  config.py  main.py
Sunspot_V2.0/old1/: camera_manager.py  hardware_manager.py  test_cam.py
Sunspot_V2.0/old2/: main.py
Sunspot_V2.0/oldbuilds/old1/: pinout.md  toggle.sh
Sunspot_V2.0/oldbuilds/old2/: camera_manager.py  config.py
Sunspot_V2.0/oldbuilds/old3/: config.py  main.py  web_ui.py
display/: CMakeLists.txt  led.cpp
display/src/: led.cpp
docker/: Dockerfile  connect.desktop
ros2_ws/src/ball_tracker/: setup.cfg  setup.py
serial/: CMakeLists.txt
serial/serial_mc/: platformio.ini
serial/serial_mc/include/: buttons.h  led.h  servo.h
serial/serial_mc/src/: buttons.cpp  led.cpp  main.cpp  serial.cpp  servo.cpp  switch.cpp
serial/src/: directpi.cpp  mcserial.cpp  serial_pi  serial_pi.cpp  test.cpp
servos/: CMakeLists.txt
servos/src/: servo.cpp  servo2.cpp  servo3.cpp  servo_oop.cpp
test/: CMakeLists.txt  Makefile
test/notes/: Claude-Video Recording with AI Object Detection and USB Storage.md
test/vision/: Claude-Video Recording with AI Object Detection and USB Storage.md  Claude-Volleyball Detection with OpenCV and AI.md  Makefile  detection  open_cv_test.cpp  vision
vision/: CMakeLists.txt
vision/models/: cascade.xml  cascade1.xml  cascade2.xml  cascade3.xml  cascade4.xml  cascade5.xml  cascade6.xml  cascade7.xml
vision/notes/: Claude-Volleyball Detection with OpenCV and AI.md
vision/src/: camera.py  preloadedmotion.cpp  savingexample.cpp  vision1.cpp  vision2.cpp  vision2_1.cpp  vision2_2.cpp  zachvision.cpp
(+59 files in other folders)
